--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -1,4 +1,32 @@
-<h1>tapor index template file</h1>
 
-{{greeting}}
+
+<div class='row' id='current'>
+	<div class="col-md-12">
+
+	</div>
+</div>
+
+
+<div class='row' id='spheres'>
+	<div class="col-md-12">
+
+	</div>
+</div>
+
+<div class='row'>
+	<div class="col-md-9">
+		<div class='row'>
+			<div class="col-md-12">
+				Curated tools
+			</div>
+		</div>
+	</div>
+	<div class="col-md-3">
+		<div class='row'>
+			All lists
+		</div>
+	</div>
+
+</div>
+
 
