--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,6 @@
  * file per style scope.
  *
  *= require bootstrap/dist/css/bootstrap
+ *= require font-awesome/css/font-awesome
+ *= require style
  */
