--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -2,6 +2,11 @@
 
 var app = angular.module("taporApp", ["ngResource", "ngRoute"]);
 
+app.config(['$httpProvider', function($httpProvider){
+  $httpProvider.defaults.headers.common['X-CSRF-Token'] = $('meta[name=csrf-token]').attr('content');
+}]);
+
+
 app.config(['$routeProvider', '$locationProvider',
   function($routeProvider,  $locationProvider) {
     $locationProvider.html5Mode(true);
@@ -54,13 +59,15 @@ app.config(['$routeProvider', '$locationProvider',
           window.location= '/users/auth/yahoo';
         }
       })
-    // //   // when('/tools', {
-    //   //   templateUrl: '<%= asset_path("templates/tapor/index.html") %>',
-    //   //   controller: 'ToolsIndexCtrl'
-    //   // }).
-      // otherwise({
-      //   redirectTo: '/'
-      // });
+      // Tools
+      .when('/tools', {
+        templateUrl: "<%= asset_path('tools/index.html') %>",
+        controller: 'ToolsIndexCtrl',
+      })
+      .when('/tools/new', {
+        templateUrl: "<%= asset_path('tools/new.html') %>",
+        controller: 'ToolsNewCtrl',
+      })
   }]);
 
 
