--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,3 +34,22 @@ body {
 .vertical-text-area {
 	resize: vertical;
 }
+
+/* star rating */
+
+.rating {
+  margin: 0;
+  display: inline-block; }
+.rating li {
+	padding: 1px;
+	color: #a9a9a9;
+	text-align: center;
+	font-weight: bold;
+	font-size: 20px;
+	list-style-type: none;
+	display: inline-block;
+	cursor: pointer; 
+}
+.rating li.filled {
+	color: #FF0; 
+}
