--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -4,7 +4,14 @@
 	<div class="col-md-12">
 	{{greeting}}
 
-	<a href='tools/new'>New Tool</a>
+	<ul>
+		<li>
+			<a href='tools/new'>New tool</a>
+		</li>
+		<li>
+			<a href='attributes/new'>New attribute</a>
+		</li>
+	</ul>
 	</div>
 </div>
 
