--- a/app/assets/templates/attributes/new.html
+++ b/app/assets/templates/attributes/new.html
@@ -17,18 +17,21 @@
 					  	<!-- <input type="text" class="form-control" id="inputPossible" placeholder="Name" ng-model="data.name"> -->
 							
 					  	
-					  	<span ng-repeat='value in data.possible_values track by $index' >
-					  		<div class='row'>
-					  		<div class="col-sm-10">
-									<input type="text" class="form-control" id="inputPossible$index" placeholder="Value" ng-model="data.possible_values[$index]">
+					  	<span ng-repeat='value in possible_values track by $index' >
+					  		<div class='row possible-value'>
+						  		<div class="col-sm-10">
+										<input type="text" class="form-control" id="inputPossible$index" placeholder="Value" ng-model="possible_values[$index]">
+									</div>
+									
+									<div class="col-sm-2">
+										<button type="button" class="btn btn-danger" ng-click='removeValueAt($index)'>	
+											<i class= "fa fa-times" > </i>
+										</button>
+									</div>
 								</div>
-								<div class="col-sm-2">
-									<button type="button" class="btn btn-danger" ng-click='removeValueAt($index)'>	
-										<i class= "fa fa-times" > </i>
-									</button>
-								</div>
-								</div>
+
 							</span>
+
 
 							<div class='row'>							
 								<div class="col-md-offset-10 col-sm-2">
@@ -48,6 +51,12 @@
 							<input type="checkbox" name="multiple" value="multiple" id="inputIsMultiple" ng-model="data.is_multiple">
 						</div>
 					</div>
+
+					<div class="form-group">
+      			<div class="col-sm-offset-2 col-sm-10">
+        			<button ng-click="createAttribute()" class="btn btn-default">Create</button>
+      			</div>
+    			</div>
     
 	  	</form>
 	  </div>
