--- a/app/assets/templates/attributes/new.html
+++ b/app/assets/templates/attributes/new.html
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 
-			    <!-- approved -->
+			    <!-- is multiple -->
 
 					<div class="form-group">
 						<label for="inputIsMultiple" class="col-sm-2 control-label">Is multiple</label>
@@ -51,6 +51,10 @@
 							<input type="checkbox" name="multiple" value="multiple" id="inputIsMultiple" ng-model="data.is_multiple">
 						</div>
 					</div>
+
+
+
+
 
 					<div class="form-group">
       			<div class="col-sm-offset-2 col-sm-10">
