Can save tool attributes through new tool view

--- a/app/assets/templates/attributes/new.html
+++ b/app/assets/templates/attributes/new.html
@@ -1,4 +1,4 @@
-<div ng-controller='AttributesNewCtrl'>
+<div ng-controller='AttributesNewCtrl' class='tapor-container'>
 	  <div class='row'>
 	  	<form class="form-horizontal" role="form">
 	  		  <!-- name -->
