--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -1,6 +1,6 @@
 
 
-<div class='row' id='current'>
+<div class='row' id='current' class='tapor-container'>
 	<div class="col-md-12">
 	{{greeting}}
 
