--- a/app/assets/templates/tapor/signin.html
+++ b/app/assets/templates/tapor/signin.html
@@ -1,8 +1,11 @@
-Signin 3
+
+<div class='tapor-container'>
+Signin 
 
 <ul>
 <li><a href="/users/auth/google_oauth2">Sign in with google</a></li>
 <li><a href="/users/auth/twitter">Sign in with twitter</a></li>
 <li><a href="/sign_out">Sign out</a></li>
-
 </ul>
+
+</div>
