--- a/app/assets/templates/tapor/loading.html
+++ b/app/assets/templates/tapor/loading.html
@@ -1,5 +1,5 @@
 
-<div class='row'>
+<div class='row' class='tapor-container'>
 	<div class='col-md-12'>
 		<!-- <p class='text-center'> -->
 			<i class="fa fa-5x fa-cog fa-spin"></i>
