--- a/app/assets/templates/tools/new.html
+++ b/app/assets/templates/tools/new.html
@@ -1,5 +1,5 @@
 
-<div ng-controller='ToolsNewCtrl'>
+<div ng-controller='ToolsNewCtrl' class='tapor-container'>
   <div class='row'>
   <form class="form-horizontal" role="form">
     
