--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 			</div>
 			<!-- end of nav -->
 
-			<div ng-view></div> 
+			<div ng-view id="main-view"></div> 
 
 			<!-- footer -->
 
@@ -65,7 +65,6 @@
 
 
 			<!-- end of fotter -->
-<%= link_to 'Sign out', destroy_user_session_path %>
 
 		</div>
 	</body>
