downgraded gem active_model_serializers to 0.8.0 as recommended by dev team

--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -1,1 +1,6 @@
-index.html
+<div ng-controller='ToolsIndexCtrl' class='tapor-container'>
+	<div class='row' ng-repeat="tool in tools track by $index">
+	<label><a href='tools/{{tool.id}}'>{{tool.name}}</a></label>
+	{{tool.description}}
+	</div>
+</div>
