--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -68,6 +68,10 @@ app.config(['$routeProvider', '$locationProvider',
         templateUrl: "<%= asset_path('tools/new.html') %>",
         controller: 'ToolsNewCtrl',
       })
+      .when('/tools/:toolId', {
+        templateUrl: "<%= asset_path('tools/detail.html') %>",
+        controller: 'ToolsDetailCtrl',
+      })
       // Attributes
       .when('/attributes', {
         templateUrl: "<%= asset_path('attributes/index.html') %>",
