Showing tool details

--- a/app/assets/templates/tools/new.html
+++ b/app/assets/templates/tools/new.html
@@ -104,7 +104,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button ng-click="createTool()" class="btn btn-default">Create</button>
+        <button ng-click="createTool()" class="btn btn-primary">Create</button>
       </div>
     </div>
 
