--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -31,7 +31,7 @@
 
 		<div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button ng-click="saveTool()" class="btn btn-primary">Save</button>
+        <button ng-click="updateToolUserDetails()" class="btn btn-primary">Save</button>
       </div>
     </div>
 
