User is_admin and is_banned can no be edited in list.

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -72,6 +72,11 @@ app.config(['$routeProvider', '$locationProvider',
         templateUrl: "<%= asset_path('tools/detail.html') %>",
         controller: 'ToolsDetailCtrl',
       })
+      // Users
+      .when('/users', {
+        templateUrl: "<%= asset_path('users/index.html') %>",
+        controller: 'UsersIndexCtrl',
+      })
       // Attributes
       .when('/attributes', {
         templateUrl: "<%= asset_path('attributes/index.html') %>",
