--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -7,12 +7,15 @@
 	<ul>
 		<li>
 			<a href='tools'>Tools</a>
-		</li>
+		</li>		
 		<li>
 			<a href='tools/new'>New tool</a>
 		</li>
 		<li>
 			<a href='attributes/new'>New attribute</a>
+		</li>
+		<li>
+			<a href='users'>Users</a>
 		</li>
 	</ul>
 	</div>
