--- a/app/assets/templates/users/detail.html
+++ b/app/assets/templates/users/detail.html
@@ -26,7 +26,7 @@
 
 				<div class="input-group">
 					
-					<input type="text" class="form-control" id="inputEmail" placeholder="Email" ng-model="data.email">
+					<input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="data.email">
 					<span class="input-group-addon">
 						Publish <input type="checkbox" name="is_email_publishable" value="is_email_publishable" id="inputIsEmailPublishable" ng-model="data.is_email_publishable">
 					</span>
@@ -48,7 +48,7 @@
 		<div class="form-group">
       <label for="inputSite" class="col-sm-2 control-label">Site</label>
       <div class="col-sm-5">
-        <input type="text" class="form-control" id="inputSite" placeholder="URL" ng-model="data.site">
+        <input type="url" class="form-control" id="inputSite" placeholder="URL" ng-model="data.site">
       </div>
     </div>
 		<!-- affiliation -->
