--- a/app/assets/templates/users/index.html
+++ b/app/assets/templates/users/index.html
@@ -27,6 +27,7 @@
 			</tr>
 			<tr ng-repeat="user in users track by $index">
 				<td>
+					<img src="{{user.image_url}}" class="img-circle">
 				</td>
 				<td>
 					{{user.name}}
