Started working on tag suggestions

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -1,6 +1,6 @@
 'use strict';
 
-var app = angular.module("taporApp", ["ngResource", "ngRoute"]);
+var app = angular.module("taporApp", ["ngResource", "ngRoute", "selectize"]);
 
 app.config(['$httpProvider', function($httpProvider){
   $httpProvider.defaults.headers.common['X-CSRF-Token'] = $('meta[name=csrf-token]').attr('content');
