--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *
  *= require bootstrap/dist/css/bootstrap
  *= require font-awesome/css/font-awesome
+ *= require selectize/dist/css/selectize.bootstrap3.css
  *= require style
  */
