--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -2,6 +2,27 @@
   <div class='row'>
 	  <form class="form-horizontal" role="form">
 
+    <!-- name -->
+
+      <div class="form-group">
+        <label for="inputStars" class="col-sm-2 control-label"></label>
+        <div class="col-sm-5 rating">
+          <label> 
+            {{data.name}}
+          </label>
+        </div>
+      </div>  
+
+    <!-- description -->
+
+    <!-- image -->
+
+      <div class="form-group">
+        <div class='class="col-sm-7'>
+          <img src='{{data.image_url}}'>
+        </div>
+      </div>
+
 	  	<!-- stars -->
 
 			<div class="form-group">
