--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -35,6 +35,26 @@ body {
 	resize: vertical;
 }
 
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
 /* star rating */
 
 .rating {
@@ -68,22 +88,16 @@ body {
 	padding : 10px;
 }
 
-.btn-file {
-    position: relative;
-    overflow: hidden;
+.tool-list-entry {
+	padding : 10px;
+
 }
-.btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
+
+.tool-list-entry-image {
+	height: 100px;
+}
+
+.nav-bar-profile {
+	height : 25px;
+	width : 25px;
 }
