--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -1,6 +1,20 @@
 <div ng-controller='ToolsIndexCtrl' class='tapor-container'>
-	<div class='row' ng-repeat="tool in tools track by $index">
-	<label><a href='tools/{{tool.id}}'>{{tool.name}}</a></label>
-	{{tool.description}}
+	<div class='row tool-list-entry' ng-repeat="tool in tools track by $index">
+		
+		<div class='col-md-3 tool-list-entry-image'>
+			<img src="/{{tool.thumb_url}}">
+		</div>
+		
+		<div class='col-md-9'>
+			<div class="row">
+				<label><a href='tools/{{tool.id}}'>{{tool.name}}</a></label>
+			</div>
+			<div class="row">
+				{{tool.description}}
+			</div>
+		</div>
+
+	
+	
 	</div>
 </div>
