Fixed updating error.

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -127,7 +127,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button ng-click="createorUpdateTool()" class="btn btn-primary">Create</button>
+        <button ng-click="createorUpdateTool()" class="btn btn-primary">Save</button>
       </div>
     </div>
 
