--- a/app/assets/templates/attributes/new.html
+++ b/app/assets/templates/attributes/new.html
@@ -35,7 +35,7 @@
 
 							<div class='row'>							
 								<div class="col-md-offset-10 col-sm-2">
-						  		<button type="button" class="btn btn-primary" ng-click='addPossibleValue()' >
+						  		<button type="button" class="btn btn-success" ng-click='addPossibleValue()' >
 						  			<i class= "fa fa-plus" > </i>
 						  		</button>
 								</div>
