--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -10,6 +10,9 @@
 		<li ng-if="current_user">
 			<a href='tools/new'>New tool</a>
 		</li>
+		<li>
+			<a href='lists/user'>My lists</a>
+		</li>
 		<li ng-if="current_user.is_admin">
 			<a href='attributes/new'>New attribute</a>
 		</li>
