--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -57,7 +57,7 @@
     </div>
 		<div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button ng-click="updateToolUserDetails()" class="btn btn-primary">Save</button>
+        <a ng-click="updateToolUserDetails()" class="btn btn-success">Save</a>
         <a ng-if='is_editable' class="btn btn-default" href="/tools/edit/{{data.id}}" role="button">Edit</a>
       </div>
     </div>
