--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -6,7 +6,7 @@
     <!-- name -->
     <div class="form-group">
       <label for="inputName" class="col-sm-2 control-label">Name</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <input type="text" class="form-control" id="inputName" placeholder="Name" ng-model="data.name" required>
       </div>
     </div>
@@ -15,7 +15,7 @@
 
     <div class="form-group">
       <label for="inputImage" class="col-sm-2 control-label">Image</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         
         <!-- <div class="input-group"> -->
 
@@ -39,7 +39,7 @@
 
     <div class="form-group">
       <label for="inputDescription" class="col-sm-2 control-label">Description</label>
-      <div class="col-sm-5	">
+      <div class="col-sm-6	">
         <textarea class="form-control vertical-text-area" rows="3" id="inputDescription" ng-model="data.description"></textarea>
       </div>
     </div>
@@ -48,7 +48,7 @@
 
     <div class="form-group">
       <label for="inputStars" class="col-sm-2 control-label">Rating</label>
-      <div class="col-sm-5 rating">
+      <div class="col-sm-6 rating">
         <div star-rating rating-value="data.tool_ratings[0].stars" on-rating-selected="rateFunction(data.tool_ratings[0].stars)" max="5"></div>
       </div>
     </div>   
@@ -57,7 +57,7 @@
 
     <div class="form-group">
       <label for="inputTags" class="col-sm-2 control-label">Tags</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <!-- <input type="text" class="form-control" id="inputTags" placeholder="Tags" ng-model="data.tool_tags.tags"> -->
         <div selectize="tag_config" options='tag_options' ng-model="data.tool_tags.tags"></div>
 
@@ -68,7 +68,7 @@
 
     <div class="form-group">
       <label for="inputComment" class="col-sm-2 control-label">Comment</label>
-      <div class="col-sm-5  ">
+      <div class="col-sm-6  ">
         <textarea class="form-control vertical-text-area" rows="3" id="inputComment" ng-model="data.comments[0].content"></textarea>
       </div>
     </div>
@@ -77,7 +77,7 @@
 
     <div class="form-group">
       <label for="inputCreatorsName" class="col-sm-2 control-label">Creator's name</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <input type="text" class="form-control" id="inputCreatorsName" placeholder="Name" ng-model="data.creators_name">
       </div>
     </div>
@@ -86,7 +86,7 @@
 
     <div class="form-group">
       <label for="inputCreatorsEmail" class="col-sm-2 control-label">Creator's email</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <input type="email" class="form-control" id="inputCreatorsEmail" placeholder="Email" ng-model="data.creators_email">
       </div>
     </div>
@@ -95,7 +95,7 @@
 
     <div class="form-group">
       <label for="inputCreatorsURL" class="col-sm-2 control-label">Creator's URL</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <input type="url" class="form-control" id="inputCreatorsURL" placeholder="URL" ng-model="data.creators_url">
       </div>
     </div>
@@ -104,7 +104,7 @@
 
     <div class="form-group" nf-if="current_user.is_admin">
       <label for="inputApproved" class="col-sm-2 control-label">Approved</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <ul>
           <li class="checkbox">
             <label>
@@ -119,60 +119,81 @@
 
     <div class="form-group" ng-repeat='attribute in data.attribute_types track by $index' >
       <label for="inputName" class="col-sm-2 control-label">{{attribute.name}}</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
          <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.possible_values"> </div>
       </div>
     </div>
    
     <!-- comments -->
   
-    <div ng-if='editing_tool' class="form-group" >
-      <label for="inputComments" class="col-sm-2 control-label">Comments</label>
-      <div class="col-sm-5">
-        <table class="table table-striped">
-          <tr>
-            <th> 
-              &nbsp;
-            </th>
-            <th> 
-              User
-            </th>
-            <th> 
-              Comment
-            </th>
-            <th> 
-              Pin
-            </th>
-            <th> 
-              Hide
-            </th>
-          </tr>
-          <tr ng-repeat='comment in data.comments track by $index'>
-            <td> 
-              <img src="{{comment.user.image_url}}" class="img-circle">
-            </td>
-            <td> 
-              {{comment.user.name}}
-            </td>
-            <td> 
-              {{comment.content}}
-            </td>
-            <td> 
-              <label>
-                <input type="checkbox" name="is_pinned" value="is_pinned" id="inputIsBlocked" ng-model="comment.is_pinned" ng-change="updateIsPinned(comment.id, comment.is_pinned)"> Is Pinned
-              </label>
-            </td>
-            <td> 
-              <label>
-                <input type="checkbox" name="is_hidden" value="is_hidden" id="inputIsBlocked" ng-model="comment.is_hidden" ng-change="updateIsPinned(comment.id, comment.is_hidden)"> Is Hidden
-              </label>
-            </td>
-          </tr>
-        </table>
-         
 
-       </div>
+    <div ng-if="is_editing">
 
+      <div class="form-group">
+        <label for="inputCreatorsURL" class="col-sm-2 control-label">Comments</label>
+
+      <!-- not pinned -->
+      <div class="col-sm-3">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Chronological
+          </div>
+          <div class="panel-body">
+            <ul class="draggable_place" as-sortable="commentDragListeners" ng-model="data.managed_comments.not_pinned">
+              <li class="column_sortable" ng-repeat="comment in data.managed_comments.not_pinned" as-sortable-item>
+                <div as-sortable-item-handle>
+                  <div>
+                    <img src="{{comment.user.image_url}}" class="img-circle">
+                  </div>
+                  <div>
+                    {{comment.user.name}}
+                  </div>
+                  <div>
+                    {{comment.content}}
+                  </div>
+                  <div>
+                    <label>
+                      Hide <input type="checkbox" name="is_hidden" value="is_hidden" id="inputIsBlocked" ng-model="comment.is_hidden"> 
+                    </label>
+                  </div>            
+                </div>
+              </li>
+            </ul>
+          </div>
+          </div>
+      </div>
+      <!-- pinned -->
+      <div class="col-sm-3">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Pinned
+          </div>
+          <div class="panel-body">
+             <ul class="draggable_place" as-sortable="commentPinnedListener" ng-model="data.managed_comments.pinned">
+              <li class="column_sortable" ng-repeat="comment in data.managed_comments.pinned" as-sortable-item>
+                <div as-sortable-item-handle>
+                  <div>            
+                    <img src="{{comment.user.image_url}}" class="img-circle">
+                  </div>
+                  <div>
+                    {{comment.user.name}}
+                  </div>
+                  <div>
+                    {{comment.content}}
+                  </div>
+                  <div>
+                    <label>
+                      Hide <input type="checkbox" name="is_hidden" value="is_hidden" id="inputIsBlocked" ng-model="comment.is_hidden"> 
+                    </label>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    
+      </div>
     </div>
 
     <!-- end -->
