--- a/app/assets/templates/users/detail.html
+++ b/app/assets/templates/users/detail.html
@@ -76,7 +76,7 @@
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
-				<button ng-click="saveProfile()" class="btn btn-primary">Save</button>
+				<button ng-click="saveProfile()" class="btn btn-success">Save</button>
 			</div>
 		</div>
 
