Showing average rating (change this ti stars?)

--- a/app/assets/templates/lists/edit.html
+++ b/app/assets/templates/lists/edit.html
@@ -18,7 +18,10 @@
           			<ul>
           				<li>
           					{{tool.name}}
-          				</li>          				
+          				</li>
+          				<li>
+          					{{tool.star_average}}
+          				</li>
           				<li ng-if="tool.creators_email">
           					{{tool.creators_email}}
           				</li>
